Merge 2 search function